@@ -1,5 +1,7 @@
 package ru.mark.sprint5.models;
 
+import java.time.Duration;
+import java.time.LocalDateTime;
 import java.util.*;
 
 /**
@@ -12,15 +14,31 @@ import java.util.*;
  */
 public class Epic extends Task {
 
-    //Список подзадач. Выбрана концепция знания родителя о своих детях, принадлежность подзадачи эпике не требовалась.
+    //Список подзадач. Выбрана концепция знания родителя о своих детях,
+    // принадлежность подзадачи эпике не требовалась.
     private Map<Integer, Subtask> subtasks;
+    /**
+     * Внутренняя структура, для хранения отсортированного по времени начала списка подзадач.
+     */
+    private TreeSet<Subtask> innerStructure;
+
     //protected здесь неуместен, поскольку никто класс Epic не наследует.
     //Комментарий: "Достаточно хранить только список id..."
     //Ответ: Эпик содержит подзадачи и является владельцем подзадач.
 
+    /**
+     * Самая ранняя подзадача.
+     */
+    private Subtask firstSubTask;
+    /**
+     * Самая поздняя подзадача.
+     */
+    private Subtask lastSubTask;
+
     public Epic(int id, String name, String description) {
         super(id, name, description);
         subtasks = new HashMap<>();
+        innerStructure = new TreeSet<>();
     }
 
     /**
@@ -28,8 +46,16 @@ public class Epic extends Task {
      */
     public void addSubTasks(Subtask subtask) {
         subtasks.put(subtask.getId(), subtask);
+        innerStructure.add(subtask);
         //обновляем статус.
         checkStatus();
+        //Обновляем начальную и последнюю задачи для наискорейшего доступа к временам.
+        if (firstSubTask == null || firstSubTask.getStartTime().isAfter(subtask.getStartTime())) {
+            firstSubTask = subtask;
+        }
+        if (lastSubTask == null || lastSubTask.getEndTime().isBefore(subtask.getEndTime())) {
+            lastSubTask = subtask;
+        }
     }
 
     @Override
@@ -42,7 +68,7 @@ public class Epic extends Task {
     private void checkStatus() {
         boolean done = true;
         boolean isNew = true;
-        for (Subtask item : subtasks.values()) {
+        for (Subtask item : innerStructure) {
             done = done && item.status == Status.DONE;
             isNew = isNew && item.status == Status.NEW;
         }
@@ -61,15 +87,49 @@ public class Epic extends Task {
     public void clearSubtasks() {
         //Очищаем список подзадач.
         subtasks.clear();
+        innerStructure.clear();
         //обновляем статус.
         status = Status.NEW;
+        firstSubTask = null;
+        lastSubTask = null;
     }
 
     /**
      * Список подзадач эпики.
      */
     public List<Subtask> getAllSubtasks() {
-        return Collections.unmodifiableList(new ArrayList<>(subtasks.values()));
+        return List.copyOf(innerStructure);
+    }
+
+    /**
+     * Расчетное дата-время завершения эпики.
+     */
+    public LocalDateTime getEndTime() {
+        if (lastSubTask != null) {
+            return lastSubTask.getEndTime();
+        } else {
+            return null;
+        }
+    }
+
+    /**
+     * Расчетное дата-время начала эпики.
+     */
+    public LocalDateTime getStartTime() {
+        if (firstSubTask != null) {
+            return firstSubTask.getStartTime();
+        } else {
+            return null;
+        }
+    }
+
+    @Override
+    public Duration getDuration() {
+        Duration result = Duration.ZERO;
+        for (Subtask subtask : innerStructure) {
+            result.plus(subtask.getDuration());
+        }
+        return result;
     }
 
     public Map<Integer, Subtask> getSubtasks() {
@@ -81,16 +141,27 @@ public class Epic extends Task {
      *
      * @param subtaskId id подзадачи
      */
-    public void removeSubtask(int subtaskId) {
-        subtasks.remove(subtaskId);
+    public Subtask removeSubtask(int subtaskId) {
+        Subtask removedSubTask = subtasks.remove(subtaskId);
+        innerStructure.remove(removedSubTask);
         //обновляем статус.
         checkStatus();
+        //Обновляем начальную и последнюю задачи для наискорейшего доступа к временам.
+        firstSubTask = innerStructure.first();
+        lastSubTask = innerStructure.last();
+        return removedSubTask;
     }
+
 
     @Override
     public String toString() {
         checkStatus();
-        return id + ",EPIC," + name + ',' + status + ',' + description + ',';
+        //представление в формате id,type,name,status,description,startTime,duration,epicId
+        return String.format("%d,EPIC,%s,%s,%s, , , ",
+                id,
+                name,
+                status,
+                description);
     }
 
 }
